crates/analyzer/tests/snapshots/errors__string_constructor_non_int_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `String` max size must be an integer
  ┌─ [snippet]:3:10
  │
3 │   String<foo>()
  │          ^^^ expected an integer


